@@ -1,0 +1,21 @@
+/* XPM */
+static char * ab_xpm[] = {
+"14 13 5 1",
+" 	c None",
+".	c #000000",
+"+	c #F70001",
+"@	c #989898",
+"#	c #CBCBCB",
+"  ....        ",
+"  .++.        ",
+"..........    ",
+"@######@@.    ",
+"@######@@.    ",
+"@#.##.#@@.    ",
+"@######@@.    ",
+"@.####.@@.    ",
+"@.####.@@.    ",
+"@#....#@@.    ",
+"@######@@.  . ",
+"..............",
+".............."};
